--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         tools:targetApi="31">
         <activity
             android:name=".Presentation.ui.Home.HomeActivity"
+            android:theme="@style/Theme.MindfullnessApp2"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
